--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Kids Wear</title>
+  <title>Womens Wear</title>
   <style>
     *{
       margin: 0px;
@@ -390,7 +390,7 @@
     <img src="./images/jacket/jacket1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -400,7 +400,7 @@
     <img src="./images/jacket/jacket2.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 249/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -410,7 +410,7 @@
     <img src="./images/jacket/jacket3.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 459/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -420,7 +420,7 @@
     <img src="./images/jacket/jacket4.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 649/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -430,7 +430,7 @@
     <img src="./images/jacket/jacket5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -440,7 +440,7 @@
     <img src="./images/jacket/jacket6.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 399/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -450,7 +450,7 @@
     <img src="./images/jacket/jacket7.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 340/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -460,7 +460,7 @@
     <img src="./images/jacket/jacket8.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 445/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -470,7 +470,7 @@
     <img src="./images/jacket/jacket9.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 679/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -480,7 +480,7 @@
     <img src="./images/jacket/jacket10.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 453/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -490,7 +490,7 @@
     <img src="./images/jacket/jacket11.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 325/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -500,7 +500,7 @@
     <img src="./images/jacket/jacket12.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 444/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -510,7 +510,7 @@
     <img src="./images/jacket/jacket13.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 764/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -520,7 +520,7 @@
     <img src="./images/jacket/jacket14.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 569/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -540,7 +540,7 @@
     <img src="./images/jacket/jacket16.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Jacket</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 239/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -550,7 +550,7 @@
     <img src="./images/shirts/sh1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -560,7 +560,7 @@
     <img src="./images/shirts/shirt1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 459/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -570,7 +570,7 @@
     <img src="./images/shirts/shirt2.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 453/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -580,7 +580,7 @@
     <img src="./images/shirts/shirt3.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 564/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -590,7 +590,7 @@
     <img src="./images/shirts/shirt4.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 762/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -600,7 +600,7 @@
     <img src="./images/shirts/shirt5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 435/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -610,7 +610,7 @@
     <img src="./images/shirts/shirt6.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 343/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -620,7 +620,7 @@
     <img src="./images/shirts/shirt7.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 235/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -630,7 +630,7 @@
     <img src="./images/shirts/shirt8.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 364/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -640,7 +640,7 @@
     <img src="./images/shirts/shirt9.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 467/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -650,7 +650,7 @@
     <img src="./images/shirts/shirt10.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 465/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -660,7 +660,7 @@
     <img src="./images/shirts/shirt11.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 500/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -670,7 +670,7 @@
     <img src="./images/shirts/shirt12.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 453/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -680,7 +680,7 @@
     <img src="./images/tshirt/T.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 756/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -690,7 +690,7 @@
     <img src="./images/tshirt/tshirt1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 449/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -700,7 +700,7 @@
     <img src="./images/tshirt/tshirt2.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 567/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -710,7 +710,7 @@
     <img src="./images/tshirt/tshirt3.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 334/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -720,7 +720,7 @@
     <img src="./images/tshirt/tshirt4.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 564/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -730,7 +730,7 @@
     <img src="./images/tshirt/tshirt5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 565/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -740,7 +740,7 @@
     <img src="./images/tshirt/tshirt6.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price  432/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -750,7 +750,7 @@
     <img src="./images/tshirt/tshirt7.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 566/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -760,7 +760,7 @@
     <img src="./images/tshirt/tshirt8.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 665/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -770,7 +770,7 @@
     <img src="./images/tshirt/tshirt9.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">T-Shirt</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price  655/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -780,7 +780,7 @@
     <img src="./images/tops/t.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Top</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 297/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -790,7 +790,7 @@
     <img src="./images/tops/to5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Top</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 659/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
