hover effect added on buy now button

--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -167,6 +167,9 @@
 
       cursor: pointer;
     }
+    .buy-button:hover{
+      background-color: rgb(236, 151, 208);
+    }
 
     .Add-to-cart {
       height: 35px;
@@ -1131,7 +1134,7 @@
     <img src="images/saree/saree2.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Saree</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 659/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -1141,7 +1144,7 @@
     <img src="images/saree/saree3.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Saree</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 989/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -1161,7 +1164,7 @@
     <img src="images/saree/saree5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Saree</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 999/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -1171,7 +1174,7 @@
     <img src="images/saree/saree6.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Saree</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 999/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
@@ -1181,7 +1184,7 @@
     <img src="images/saree/saree7.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Saree</h2>
-      <p class="card-price">Price 1499/- Only</p>
+      <p class="card-price">Price 899/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
       <button class="Add-to-cart">Add to cart</button>
