--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -124,6 +124,7 @@
       box-shadow: 0 2px 5px rgba(41, 45, 178, 0.3);
       overflow: hidden;
     }
+    
 
     .card img {
       margin-left: 50px;
@@ -133,6 +134,11 @@
       box-shadow: 2px 2px 2px 2px#e67fe0;
       width: 150px;
       height: 200px;
+    }
+
+    .card img:hover{
+      width: 165px;
+      height: 250px;
     }
 
     .card-content {
@@ -181,6 +187,10 @@
       margin-left: 12px;
       cursor: pointer;
     }
+    .Add-to-cart:hover{
+      background-color: rgb(228, 186, 214);
+    }
+    
 
     .footer-logo {
       height: 100px;
