--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -124,6 +124,9 @@
       box-shadow: 0 2px 5px rgba(41, 45, 178, 0.3);
       overflow: hidden;
     }
+    .card:hover{
+      box-shadow: 0px 0px  20px#e67fe0;
+    }
     
 
     .card img {
@@ -136,10 +139,7 @@
       height: 200px;
     }
 
-    .card img:hover{
-      width: 165px;
-      height: 250px;
-    }
+   
 
     .card-content {
       padding: 6px;
