--- a/categories pages/beauty.html
+++ b/categories pages/beauty.html
@@ -250,35 +250,35 @@
       </a>
   </div>
 
-  <h1 class="ft-heading"> Footwear 👠</h1>
+  <h1 class="ft-heading"> 💇‍♂️ RTC Beauty products 💇‍♀️✨</h1>
 
 
   <!-- Categories-->
   <div class="categories-container-bag">
     <div>
-      <img src="../images/sandal.jpg" class="categories-card" />
-      <h class="categories-card-title-1">&nbsp &nbspWomen Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <img src="../images/Swiss Beauty Liquid Light weight Concealer.jpg" class="categories-card" />
+      <h class="categories-card-title-1">&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSwiss Beauty Liquid <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp Light weight Concealer<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 800/- only </h><br>
       <a href="./back-end-buy.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
-      <img src="../images/bellies.webp" class="categories-card" />
-      <h class="categories-card-title-1">&nbsp &nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <img src="../images/POND'S Bright Beauty.jpg" class="categories-card" />
+      <h class="categories-card-title-1">&nbsp &nbsp &nbsp POND'S Bright Beauty<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 1200/- only </h><br>
       <a href="./back-end-buy.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
-      <img src="../images/attractive.webp" class="categories-card" />
-      <h class="categories-card-title-1"> &nbsp &nbsp &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <img src="../images/RENEE Fab 5 5-in-1 Lipstick.jpg" class="categories-card" />
+      <h class="categories-card-title-1"> &nbsp &nbsp &nbsp RENEE Fab 5 5-in-1 Lipstick<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 1100/- Only</h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
-      <img src="../images/attractivejuttis.webp" class="categories-card" />
-      <h class="categories-card-title-1"> &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <img src="../images/Swiss Beauty Liquid Light weight Concealer.jpg" class="categories-card" />
+      <h class="categories-card-title-1"> &nbsp Swiss Beauty Liquid Light weight Concealer<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         Ru 1000/- Only</h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
@@ -290,29 +290,29 @@
   <!--div 2-->
   <div class="categories-container-bag">
     <div>
-      <img src="../images/fashion.webp" class="categories-card" />
-      <h class="categories-card-title-1">Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
+      <img src="../images/Fab 5 5-in-1 Lipstick.jpg"class="categories-card" />
+      <h class="categories-card-title-1">Fab 5 5-in-1 Lipstick<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
         800/- only </h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
-      <img src="../images/latest.webp" class="categories-card" />
-      <h class="categories-card-title-1">&nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
+      <img src="../images/Smudge Me Not - Mini Liquid Lipstick.jpg" class="categories-card" />
+      <h class="categories-card-title-1">&nbsp &nbsp Smudge Me Not - Mini Liquid Lipstick<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
         1200/- only </h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
-      <img src="../images/juttis.webp" class="categories-card" />
-      <h class="categories-card-title-1"> &nbsp &nbsp &nbsp Trendy Sandal For Girls <br> &nbsp &nbsp &nbsp &nbsp &nbsp
+      <img src="../images/Elle18 Color Pop Matte Lip Color.jpg" class="categories-card" />
+      <h class="categories-card-title-1"> &nbsp &nbsp &nbsp Elle18 Color Pop Matte Lip Color<br> &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp &nbsp Ru 1100/- Only</h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
-      <img src="../images/simple.webp" class="categories-card" />
-      <h class="categories-card-title-1"> &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <img src="../images/Organic 4 Care Vitamin C Skin.jpg" class="categories-card" />
+      <h class="categories-card-title-1"> &nbsp Organic 4 Care Vitamin C Skin<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         Ru 1000/- Only</h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
@@ -322,75 +322,33 @@
   <!--div 3-->
   <div class="categories-container-bag">
     <div>
-      <img src="../images/sandal.jpg" class="categories-card" />
-      <h class="categories-card-title-1">Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
+      <img src="../images/Kimirica Five Elements Premium Body wash.jpg" class="categories-card" />
+      <h class="categories-card-title-1">Kimirica Five Elements Premium Body wash<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
         800/- only </h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
-      <img src="../images/trendy.webp" class="categories-card" />
-      <h class="categories-card-title-1">&nbsp &nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <img src="../images/Swiss Beauty Liquid Light weight Concealer.jpg" class="categories-card" />
+      <h class="categories-card-title-1">&nbsp &nbsp &nbsp Swiss Beauty Liquid Light weight Concealer<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 1200/- only </h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
-      <img src="../images/sandal1.webp" class="categories-card" />
-      <h class="categories-card-title-1"> &nbsp &nbsp &nbsp Women Trendy Sandal <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <img src="../images/Dry Nails Silky Soft Hair.jpg" class="categories-card" />
+      <h class="categories-card-title-1"> &nbsp &nbsp &nbsp Dry Nails Silky Soft Hair <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 1100/- Only</h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
-      <img src="../images/attractivejuttis.webp" class="categories-card" />
-      <h class="categories-card-title-1"> &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <img src="../images/Just Herbs Natural.jpg" class="categories-card" />
+      <h class="categories-card-title-1"> &nbsp Just Herbs Natural<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         Ru 1000/- Only</h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
-  </div><br>
-
-      <!--div 4-->
-      <div class="categories-container-bag">
-        <div>
-          <img src="../images/sandal.jpg" class="categories-card" />
-          <h class="categories-card-title-1">Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
-            800/- only </h><br>
-          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
-          <button class="View-btn">Add to Cart</button>
-        </div>
-        <div>
-          <img src="../images/bellies.webp" class="categories-card" />
-          <h class="categories-card-title-1">&nbsp &nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp
-            &nbsp
-            &nbsp Ru 1200/- only </h><br>
-          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
-          <button class="View-btn">Add to Cart</button>
-
-        </div>
-        <div>
-          <img src="../images/footwere.jpg" class="categories-card" />
-          <h class="categories-card-title-1"> &nbsp &nbsp &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp
-            &nbsp
-            &nbsp Ru 1100/- Only</h><br>
-          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
-          <button class="View-btn">Add to Cart</button>
-        </div>
-        <div>
-          <img src="../images/attractivejuttis.webp" class="categories-card" />
-          <h class="categories-card-title-1"> &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-            &nbsp
-            Ru 1000/- Only</h><br>
-          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
-          <button class="View-btn">Add to Cart</button>
-        </div>
-      </div><br>
-
-
-
-
-
 
 
 </body>
