normal changes in beauty

--- a/categories pages/beauty.html
+++ b/categories pages/beauty.html
@@ -257,7 +257,7 @@
   <div class="categories-container-bag">
     <div>
       <img src="../images/Swiss Beauty Liquid Light weight Concealer.jpg" class="categories-card" />
-      <h class="categories-card-title-1">&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSwiss Beauty Liquid <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp Light weight Concealer<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <h class="categories-card-title-1">&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLight weight Concealer<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 800/- only </h><br>
       <a href="./back-end-buy.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
@@ -278,7 +278,7 @@
     </div>
     <div>
       <img src="../images/Swiss Beauty Liquid Light weight Concealer.jpg" class="categories-card" />
-      <h class="categories-card-title-1"> &nbsp Swiss Beauty Liquid Light weight Concealer<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <h class="categories-card-title-1"> &nbsp Swiss Beauty Liquid Light weight<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         Ru 1000/- Only</h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
@@ -298,7 +298,7 @@
     </div>
     <div>
       <img src="../images/Smudge Me Not - Mini Liquid Lipstick.jpg" class="categories-card" />
-      <h class="categories-card-title-1">&nbsp &nbsp Smudge Me Not - Mini Liquid Lipstick<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
+      <h class="categories-card-title-1">&nbsp &nbsp Smudge Me Not Mini Liquid<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
         1200/- only </h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
@@ -323,14 +323,14 @@
   <div class="categories-container-bag">
     <div>
       <img src="../images/Kimirica Five Elements Premium Body wash.jpg" class="categories-card" />
-      <h class="categories-card-title-1">Kimirica Five Elements Premium Body wash<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
+      <h class="categories-card-title-1">Kimirica Five Elements<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
         800/- only </h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
       <img src="../images/Swiss Beauty Liquid Light weight Concealer.jpg" class="categories-card" />
-      <h class="categories-card-title-1">&nbsp &nbsp &nbsp Swiss Beauty Liquid Light weight Concealer<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      <h class="categories-card-title-1">&nbsp &nbsp &nbsp Swiss Beauty Liquid Light<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 1200/- only </h><br>
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
