--- a/Jwellary_pages/daimond.html
+++ b/Jwellary_pages/daimond.html
@@ -367,20 +367,23 @@
             <div class="item"><img src="../images/images_jwellary/D10.jpg" height="130px">
                 <br/>
                 <del>₹4000 </del><br/> ₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
 
             </div>
             <div class="item"><img src="../images/images_jwellary/D2.jpg" height="130px" width="190px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
             <div class="item"><img src="../images/images_jwellary/D4.jpg" height="130px" width="190px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
         </div>
@@ -390,25 +393,29 @@
             <div class="item"><img src="../images/images_jwellary/D6.jpg" height="130px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
             <div class="item"><img src="../images/images_jwellary/D7.jpg" height="130px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
             <div class="item"><img src="../images/images_jwellary/D8.jpg" height="130px" width="190px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
             <div class="item"><img src="../images/images_jwellary/D9.webp" height="130px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
 
@@ -420,25 +427,29 @@
             <div class="item"><img src="../images/images_jwellary/D11.jpg" height="130px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
             <div class="item"><img src="../images/images_jwellary/D12.jpg" height="130px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
             <div class="item"><img src="../images/images_jwellary/D14.jpg" height="130px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
             <div class="item"><img src="../images/images_jwellary/D13.jpg" height="130px">
                 <br/>
                 <del>₹4000</del><br/>₹3500 <br/>
-                <button class="btn">Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
             </div>
 
