--- a/Jwellary_pages/gold.html
+++ b/Jwellary_pages/gold.html
@@ -155,7 +155,7 @@
             height: 90px;
         }
         
-        .logo {
+        .logo1 {
             height: 75px;
             display: block;
             position: sticky;
@@ -327,7 +327,7 @@
 
         <div class="navbar">
 
-            <img src="../images/logo.jpg" class="logo" />
+            <img src="../images/logo.jpg" class="logo1" />
 
             <a href="../index.html">
                 <img src="../images/home.png" class="home" />
@@ -366,27 +366,33 @@
             <div class="item"><img src="../images/images_jwellary/G1.jpg" height="130px">
                 <br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button> </div>
             <div class="item"><img src="../images/images_jwellary/G15.jpg" height="130px">
                 <br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
-                <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button> </div>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
+                <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
+            </div>
             <div class="item"><img src="../images/images_jwellary/G3.jpg" height="120px">
                 <br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G4.jpg" height="130px">
                 <br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G5.jpg" height="130px">
                 <br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
         </div>
 
@@ -394,24 +400,29 @@
             <div class="item"><img src="../images/images_jwellary/G2.jpg" height="130px">
                 <br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G7.jpg" height="130px">
                 <br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G8.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G9.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G10.webp" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
         </div>
 
@@ -419,23 +430,28 @@
         <div class="box">
             <div class="item"><img src="../images/images_jwellary/G11.webp" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G12.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G13.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G14.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/G6.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
         </div>
         <br/>
