--- a/Jwellary_pages/perl.html
+++ b/Jwellary_pages/perl.html
@@ -155,7 +155,7 @@
             height: 90px;
         }
         
-        .logo {
+        .logo1 {
             height: 75px;
             display: block;
             position: sticky;
@@ -327,7 +327,7 @@
 
         <div class="navbar">
 
-            <img src="../images/logo.jpg" class="logo" />
+            <img src="../images/logo.jpg" class="logo1" />
 
             <a href="../index.html">
                 <img src="../images/home.png" class="home" />
@@ -367,46 +367,56 @@
             <div class="item"><img src="../images/images_jwellary/p1.jpg" height="130px">
                 <br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p4.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p3.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p7.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p5.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
         </div>
 
         <div class="box">
             <div class="item"><img src="../images/images_jwellary/p2.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p6.jpg" height="130px" width="170px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p13.jpg" height="170px" width="170px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p9.avif" height="130px" width="140px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p10.jpg" height="130px" width="140px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
         </div>
 
@@ -414,23 +424,28 @@
         <div class="box">
             <div class="item"><img src="../images/images_jwellary/p11.jpg" height="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p12.jpg" height="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p8.jpg" height="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p14.jpg" height="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/p15.jpg" height="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
         </div>
         <br/>
