--- a/Jwellary_pages/silver.html
+++ b/Jwellary_pages/silver.html
@@ -121,7 +121,7 @@
             height: 90px;
         }
         
-        .logo {
+        .logo1 {
             height: 75px;
             display: block;
             position: sticky;
@@ -318,7 +318,7 @@
 
         <div class="navbar">
 
-            <img src="../images/logo.jpg" class="logo" />
+            <img src="../images/logo.jpg" class="logo1" />
 
             <a href="../index.html">
                 <img src="../images/home.png" class="home" />
@@ -335,7 +335,7 @@
             </a>
 
             <a href="../pages in navbar/addtocart.html">
-                <img src="./images/add-to-cart.png" class="add-to-cart" /></a>
+                <img src="../images/add-to-cart.png" class="add-to-cart" /></a>
             <a href="../pages in navbar/signup.html" class="categories-1">
                 <button class="sign-up">Sign Up</button>
             </a>
@@ -355,46 +355,56 @@
         <div class="box">
             <div class="item"><img src="../images/images_jwellary/s5.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <a href="../pages in navbar/addtocart.html"><button class="cart">Add To Cart</button></a> </div>
             <div class="item"><img src="../images/images_jwellary/s2.jpg" height="130px" width="190px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s3..webp" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s4.jpg" height="130px" width="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s1.jpg" height="130px" width="190px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
         </div>
 
         <div class="box">
             <div class="item"><img src="../images/images_jwellary/s6.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s7.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s8.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s9.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s10.jpg" height="130px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
         </div>
 
@@ -402,23 +412,28 @@
         <div class="box">
             <div class="item"><img src="../images/images_jwellary/s11.jpg" height="130px" width="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s12.jpg" height="130px" width="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s13.jpg" height="130px" width="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s14.jpg" height="130px" width="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
             <div class="item"><img src="../images/images_jwellary/s15.jpg" height="130px" width="150px"><br/>
                 <del>₹4000 </del> <br/>₹3500 <br/>
-                <button class="btn"> Buy Now</button>
+                <a href="../buy.html">
+                    <button class="btn"> Buy Now</button></a>
                 <button class="cart"><a href="../pages in navbar/addtocart.html">Add To Cart</a></button></div>
         </div>
         <br/>
