added about page

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <p class="social-list">Facebook<br>Twitter <br>You Tube</p>
         
         <h2 class="about-2"> ABOUT</h2>
-        <a href="./pages in navbar/About.html"><p class="about-list-2">About Us</p></div>
+        <a href="about.html"><p class="about-list-2">About Us</p></div>
         
     </div>
     </div>
