--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -337,36 +337,37 @@
   <body>
     
 <body class="body">
+  <div class="navbar">
+
+    <a href="../pages in navbar/profile.html">
+      <img src="../images/user.png">
+
+      <a href="../index.html">
+        <img src="../images/home.png" class="home" />
+      </a>
+      <form id="form">
+        <input type="search" id="query" name="q" placeholder="Search here ...." class="search-bar">
+        <button class="search-button">Search</button>
+    </a>
+    </form>
+
+    <a href="../pages/Notification.html">
+      <img src="../images/notification.png" class="home" />
+
+
+
+      <a href="../pages in navbar/addtocart.html">
+        <img src="../images/add-to-cart.png" class="add-to-cart" /></a>
+
+      <a href="../pages in navbar/return.html" class="categories-1">
+        <h3 class="return-order">Return Order</h3>
+      </a>
+  </div>
+
   <div class="top-heading">
      
   </div>
-  <div class="navbar">
-
-      <a href="./pages/user.html">
-          <img src="./images/user.png" class="profile" />
-      </a>
-
-      <a href="../index.html">
-          <img src="./images/home.png" class="home" />
-      </a>
-      <form id="form">
-          <input type="search" id="query" name="q" placeholder="Search here ...." class="search-bar">
-          <button class="search-button">Search</button>
-      </form>
-
-      <a href="./pages/Notification.html">
-          <img src="./images/notification.png" class="home" />
-
-      </a>
-
-      <a href="./pages in navbar/addtocart.html">
-          <img src="./images/add-to-cart.png" class="add-to-cart" /></a>
-
-      <a href="./pages in navbar/return.html" class="categories-1">
-          <h3 class="return-order">Return Order</h3>
-      </a>
-  </div>
-
+  
       <h1 class="ft-heading">Kids Wear</h1>
   
 
