--- a/categories pages/winter.html
+++ b/categories pages/winter.html
@@ -166,6 +166,27 @@
             border-radius: 5px;
             cursor: pointer;
         }
+        .buy-button{
+        height: 30px;
+    width: 100px;
+    color: white;
+    border-radius: 3px;
+    border-style: solid;
+    background-color: rgb(240, 9, 163);
+    margin-left: 8px;
+    margin-top: 10px;
+      
+      }
+      .Add-to-cart{
+        height: 30px;
+    width: 100px;
+    color: rgb(5, 5, 5);
+    border-radius: 3px;
+    border-style: solid;
+    background-color: rgb(255, 255, 255);
+    margin-left: 8px;
+        
+      }
     </style>
 </head>
 
