change heading in mens wear

--- a/categories pages/mens-suits.html
+++ b/categories pages/mens-suits.html
@@ -413,7 +413,7 @@
 
     </div>
 </div>
-      <h1 class="ft-heading">RTC Bags Fashion🎒🛍️</h1>   
+      <h1 class="ft-heading">Men's Wear</h1>   
       <div class="second_div">
            <img src="./images/men-suits-banner.jpg" class="offer-img">
       </div>
