--- a/categories pages/beauty.html
+++ b/categories pages/beauty.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Footwear</title>
+  <title>Beauty products</title>
   <style>
     .second_div {
 
@@ -211,6 +211,86 @@
       justify-content: space-around;
       background-color: rgb(242, 239, 236);
     }
+    .footer {
+    position: relative;
+    background-color: #040436;
+    height: 300px;
+    margin-top: 80px;
+}
+
+.about {
+    position: absolute;
+    top: 25px;
+    margin-left: 80px;
+    color: #e6e6ff;
+}
+
+.about-list {
+    position: absolute;
+    top: 80px;
+    margin-left: 76px;
+    color: #e6e6ff;
+    font-size: 20px;
+}
+
+.help {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 500px;
+    top: 25px;
+}
+
+.help-list {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 500px;
+    top: 90px;
+    font-size: 20px;
+}
+
+.policy {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 760px;
+    top: 25px;
+}
+
+.policy-list {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 760px;
+    top: 90px;
+    font-size: 20px;
+}
+
+.social {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 1000px;
+    top: 25px;
+}
+
+.social-list {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 1000px;
+    top: 90px;
+    font-size: 20px;
+}
+
+.contact {
+    margin-left: 50px;
+}
+
+.call {
+    text-decoration: none !important;
+}
+
+.anc {
+    text-decoration: none !important;
+    color: white;
+}
+
 
     .ft-heading {
       background-color: rgb(212, 227, 239);
@@ -349,6 +429,34 @@
       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
+
+     <!--footer-->
+
+ <div class="footer">
+  <h2 class="about">CONTACT</h2><br>
+  <p class="about-list">
+      <a href="mailto:tinukohare@gmail.com" class="anc">
+          <img src="./images/email.png" height="30px" alt="E-mail" /> E-mail: rtcfashionclub@gmail.com
+      </a><br>
+      <a href="tel:+91-8459562384" class="anc">
+          <img src="./images/call.png" height="30px" alt="Call" />
+          <h class="call">Call: +91 8459562384<br></a>
+
+      <a href="https://goo.gl/maps/XYayxp7jYfVYHPRCA" class="anc">
+          <img src="./images/location.png" height="30px" /> Address: Nagpur
+      </a><br></p>
+
+
+  <h2 class="help"> HELP</h2>
+  <p class="help-list">Payments<br> Shiping <br>Customer Service <br> FAQ</p>
+
+  <h2 class="policy"> POLICY</h2>
+  <p class="policy-list">Return Policy<br>Terms Of Use <br> Security <br> Privacy</p>
+
+
+  <h2 class="social"> SOCIAL</h2>
+  <p class="social-list">Facebook<br>Twitter <br>You Tube</p>
+</div>
 
 
 </body>
