added rtc heading

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
 
     <!--add-->
+    <h1 align="center">RTC FASHION CLUB</h1>
 
     <div class="add">
         <img src="./images/sore.png" class="add-img" />
